fable/test/valid/do_ix_num.f
      program prog
      parameter(num=2)
      do ix=1,num
        write(6, *) ix
      enddo
      end
