fable/test/semantic_error/parameter_save.f
      program prog
      parameter(num=1)
      save num
      end
